--- a/src/app/home/header/header.component.html
+++ b/src/app/home/header/header.component.html
@@ -20,7 +20,7 @@
                     </p>
 
                     <!-- Button -->
-                    <a class="btn btn-outline-primary text-white text-primary-hover mb-7 mb-md-0" href="#menu">
+                    <a class="btn btn-outline-primary text-white text-primary-hover mb-7 mb-md-0" [routerLink]="['/menu']">
             Check our Menu
           </a>
 
